--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body {
 }
 
 .burger:hover .top-bun{
-    animation: open-top 0.7s ease-in-out forwards;
+    animation: open-top 0.7s ease-in-out forwards,
+               rotate 0.7s linear forwards infinite;
 }
 
 .burger:hover .tomato{
@@ -121,6 +122,15 @@ body {
     }
     100% {
         transform: rotate(0deg);
+    }
+}
+
+@keyframes rotate{
+    0% {
+        background-position-x: 0.5rem;
+    }
+    100% {
+        background-position-x: 2rem;
     }
 }
 
